[tool.poetry]
name = "mathflow-algorithms"
version = "0.1.0"
description = ""
authors = ["TheSpaceSheep <noe.malais@gmail.com>"]
readme = "README.md"
packages = [{include = "mathflow_algorithms"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
